added a styling the contact page form section

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,8 @@
   "cSpell.words": [
     "backgroundimg",
     "categorydisplay",
+    "icone",
+    "iconne",
     "imageid",
     "subnavbar"
   ]
